# svrdb-graphql

./: .env.example  .gitignore  Dockerfile  README.md  app.py  definitions.py  docker-compose.yml  pyproject.toml  run.sh  seed.py
db/: __init__.py  db.py  models.py
seeding/: counties.py  datasrcs.py  spc.py  spc_corrections.py
svrdb/: definitions.py  fetch.py  inputs.py  models.py  query.py  setup.py  types.py
svrdb/loader/data/: us_cty_fips.txt
