[tool.poetry]
name = "svrdb-graphql"
version = "0.1.0"
description = ""
authors = ["wxmann <jim.z.tang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
strawberry-graphql = {extras = ["debug-server"], version = "^0.87.1"}
SQLAlchemy = "^1.4.27"
PyMySQL = "^1.0.2"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
